Wed Sep  5 19:55:01 BST 2001  Colin Watson  <cjwatson@debian.org>

	* GNUmakefile.in (dist): Generate a .tar.gz, not a .tgz.
	* src/man.c: Korean: roff_device is ascii8, LESSCHARSET is iso8859.
	* po/cs.po, po/de.po, po/es.po, po/fr.po, po/it.po, po/ja.po:
	  Update.

Wed Sep  5 03:42:18 BST 2001  Colin Watson  <cjwatson@debian.org>

	* src/compression.c (decompress): Constify arguments.
	* include/manconfig.h.in: Likewise.

	* src/lexgrog.l (find_name): Deal with '-' and compressed files.
	* man/man1/lexgrog.man1 (DESCRIPTION): Document this.
	  (BUGS): Remove (optimism ...).
	  (NOTES): New section. lexgrog can't parse .so requests.
	* src/Makefile.in: Really build lexgrog by default, and add some
	  objects.

Wed Sep  5 02:02:20 BST 2001  Colin Watson  <cjwatson@debian.org>

	* docs/NEWS: Describe recent changes.

	* man/man1/man.man1 (OPTIONS): Document --html.
	  (ENVIRONMENT): Document $BROWSER.
	* man/man8/mandb.man8 (OPTIONS): Explain that --create implies
	  --no-purge.

Tue Sep  4 18:38:23 BST 2001  Colin Watson  <cjwatson@debian.org>

	* src/man.c (format_display): If $BROWSER contains several elements
	  separated by colons, try each in turn until one succeeds.

Tue Sep  4 02:09:07 BST 2001  Colin Watson  <cjwatson@debian.org>

	* src/man.c (format_display): Actually change to the temporary
	  directory for HTML output.
	* src/mandb.c (main): --create implies --no-purge.

Sat Sep  1 17:40:06 BST 2001  Colin Watson  <cjwatson@debian.org>

	* lib/mkdtemp.c, lib/mkstemp.c, lib/tempname.c: New files, taken
	  from glibc 2.2.4.
	* lib/Makefile.in, lib/README: Add them.
	* configure.in: Check for mkdtemp() and mkstemp().
	* lib/tempfile.c (path_search): New function, split from
	  create_tempfile(). Now checks $TMP as well as $TMPDIR, and ensures
	  that neither is checked when privileges are raised.
	  (create_tempfile): Use it. Fix the umask around the call to
	  mkstemp() rather than calling fchmod() after the fact.
	  (create_tempdir): New function.