@@ -1,3 +1,10 @@
+Thu Sep  6 21:54:05 BST 2001  Colin Watson  <cjwatson@debian.org>
+
+	* include/Defines.in: Add lexgrog to list of transformed program
+	  names. Adjust sysconfdir detection.
+	* src/Makefile.in (install): Really install lexgrog by default.
+	  Create the directory config_file is in rather than sysconfdir.
+
 Wed Sep  5 19:55:01 BST 2001  Colin Watson  <cjwatson@debian.org>
 
 	* GNUmakefile.in (dist): Generate a .tar.gz, not a .tgz.
